--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "express": "^4.21.2",
     "firebase": "^11.5.0",
     "firebase-admin": "^13.2.0",
+    "serverless-http": "^3.2.0",
     "stripe": "^17.7.0"
   }
 }
